--- a/prepros.cfg
+++ b/prepros.cfg
@@ -22,17 +22,6 @@
           "height": 0,
           "width": 0
         },
-        "0ffc35d4": {
-          "id": "0ffc35d4",
-          "path": "index.html",
-          "output": "index.html",
-          "name": "index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "6a83251f": {
           "id": "6a83251f",
           "path": "css/bootstrap-theme.css",
@@ -240,22 +229,6 @@
           "height": 0,
           "width": 0
         },
-        "2cd3af08": {
-          "id": "2cd3af08",
-          "path": "css/shop-homepage.css",
-          "output": "css/shop-homepage-dist.css",
-          "name": "shop-homepage.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "de5ffe1d": {
           "id": "de5ffe1d",
           "path": "js/jquery.js",
@@ -284,6 +257,35 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "464b5def": {
+          "id": "464b5def",
+          "path": "store.html",
+          "output": "store.html",
+          "name": "store.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "cd07ef67": {
+          "id": "cd07ef67",
+          "path": "css/style.scss",
+          "output": "css/style.css",
+          "name": "style.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
