--- a/prepros.cfg
+++ b/prepros.cfg
@@ -286,6 +286,629 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "29c7c76a": {
+          "id": "29c7c76a",
+          "path": "contact.html",
+          "output": "contact.html",
+          "name": "contact.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6f076647": {
+          "id": "6f076647",
+          "path": "about.html",
+          "output": "about.html",
+          "name": "about.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "ac483809": {
+          "id": "ac483809",
+          "path": "css/landing-page.css",
+          "output": "css/landing-page-dist.css",
+          "name": "landing-page.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "1afcc70f": {
+          "id": "1afcc70f",
+          "path": "img/phones.png",
+          "output": "img/phones.png",
+          "name": "phones.png",
+          "category": "IMAGE",
+          "size": 353890,
+          "type": "png",
+          "initialSize": 353890,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "870c536f": {
+          "id": "870c536f",
+          "path": "img/intro-bg.jpg",
+          "output": "img/intro-bg.jpg",
+          "name": "intro-bg.jpg",
+          "category": "IMAGE",
+          "size": 125128,
+          "type": "jpg",
+          "initialSize": 125128,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b64612ce": {
+          "id": "b64612ce",
+          "path": "img/banner-bg.jpg",
+          "output": "img/banner-bg.jpg",
+          "name": "banner-bg.jpg",
+          "category": "IMAGE",
+          "size": 99523,
+          "type": "jpg",
+          "initialSize": 99523,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d86634d6": {
+          "id": "d86634d6",
+          "path": "img/dog.png",
+          "output": "img/dog.png",
+          "name": "dog.png",
+          "category": "IMAGE",
+          "size": 676552,
+          "type": "png",
+          "initialSize": 676552,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5317fff9": {
+          "id": "5317fff9",
+          "path": "img/ipad.png",
+          "output": "img/ipad.png",
+          "name": "ipad.png",
+          "category": "IMAGE",
+          "size": 721534,
+          "type": "png",
+          "initialSize": 721534,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1fd2cfbf": {
+          "id": "1fd2cfbf",
+          "path": "font-awesome/css/font-awesome.css",
+          "output": "font-awesome/css/font-awesome-dist.css",
+          "name": "font-awesome.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "19e3b347": {
+          "id": "19e3b347",
+          "path": "font-awesome/scss/_fixed-width.scss",
+          "output": "font-awesome/css/_fixed-width.css",
+          "name": "_fixed-width.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "df094894": {
+          "id": "df094894",
+          "path": "font-awesome/scss/font-awesome.scss",
+          "output": "font-awesome/css/font-awesome.css",
+          "name": "font-awesome.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "b480394d": {
+          "id": "b480394d",
+          "path": "font-awesome/css/font-awesome.min.css",
+          "output": "font-awesome/css/font-awesome.min-dist.css",
+          "name": "font-awesome.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "341e06d8": {
+          "id": "341e06d8",
+          "path": "font-awesome/less/bordered-pulled.less",
+          "output": "font-awesome/css/bordered-pulled.css",
+          "name": "bordered-pulled.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "0886378e": {
+          "id": "0886378e",
+          "path": "font-awesome/less/core.less",
+          "output": "font-awesome/css/core.css",
+          "name": "core.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "174ade47": {
+          "id": "174ade47",
+          "path": "font-awesome/less/fixed-width.less",
+          "output": "font-awesome/css/fixed-width.css",
+          "name": "fixed-width.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "19286d48": {
+          "id": "19286d48",
+          "path": "font-awesome/less/font-awesome.less",
+          "output": "font-awesome/css/font-awesome.css",
+          "name": "font-awesome.less",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "less"
+        },
+        "f2aef3f3": {
+          "id": "f2aef3f3",
+          "path": "font-awesome/less/icons.less",
+          "output": "font-awesome/css/icons.css",
+          "name": "icons.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "39e01b09": {
+          "id": "39e01b09",
+          "path": "font-awesome/less/larger.less",
+          "output": "font-awesome/css/larger.css",
+          "name": "larger.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "11ed99c1": {
+          "id": "11ed99c1",
+          "path": "font-awesome/less/list.less",
+          "output": "font-awesome/css/list.css",
+          "name": "list.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "2f265937": {
+          "id": "2f265937",
+          "path": "font-awesome/less/mixins.less",
+          "output": "font-awesome/css/mixins.css",
+          "name": "mixins.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "46897a27": {
+          "id": "46897a27",
+          "path": "font-awesome/less/path.less",
+          "output": "font-awesome/css/path.css",
+          "name": "path.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "53181eb1": {
+          "id": "53181eb1",
+          "path": "font-awesome/less/rotated-flipped.less",
+          "output": "font-awesome/css/rotated-flipped.css",
+          "name": "rotated-flipped.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "8165f387": {
+          "id": "8165f387",
+          "path": "font-awesome/less/spinning.less",
+          "output": "font-awesome/css/spinning.css",
+          "name": "spinning.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "2ea9117b": {
+          "id": "2ea9117b",
+          "path": "font-awesome/less/stacked.less",
+          "output": "font-awesome/css/stacked.css",
+          "name": "stacked.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "95cf4dae": {
+          "id": "95cf4dae",
+          "path": "font-awesome/less/variables.less",
+          "output": "font-awesome/css/variables.css",
+          "name": "variables.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19286d48"
+          ],
+          "type": "less"
+        },
+        "70a230bd": {
+          "id": "70a230bd",
+          "path": "font-awesome/scss/_bordered-pulled.scss",
+          "output": "font-awesome/css/_bordered-pulled.css",
+          "name": "_bordered-pulled.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "ce425d5a": {
+          "id": "ce425d5a",
+          "path": "font-awesome/scss/_core.scss",
+          "output": "font-awesome/css/_core.css",
+          "name": "_core.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "4aef416c": {
+          "id": "4aef416c",
+          "path": "font-awesome/scss/_icons.scss",
+          "output": "font-awesome/css/_icons.css",
+          "name": "_icons.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "788e866a": {
+          "id": "788e866a",
+          "path": "font-awesome/scss/_larger.scss",
+          "output": "font-awesome/css/_larger.css",
+          "name": "_larger.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "d9b29840": {
+          "id": "d9b29840",
+          "path": "font-awesome/scss/_list.scss",
+          "output": "font-awesome/css/_list.css",
+          "name": "_list.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "f7be662f": {
+          "id": "f7be662f",
+          "path": "font-awesome/scss/_mixins.scss",
+          "output": "font-awesome/css/_mixins.css",
+          "name": "_mixins.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "ac2c92f6": {
+          "id": "ac2c92f6",
+          "path": "font-awesome/scss/_path.scss",
+          "output": "font-awesome/css/_path.css",
+          "name": "_path.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "9c98354e": {
+          "id": "9c98354e",
+          "path": "font-awesome/scss/_rotated-flipped.scss",
+          "output": "font-awesome/css/_rotated-flipped.css",
+          "name": "_rotated-flipped.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "3a6ff1fd": {
+          "id": "3a6ff1fd",
+          "path": "font-awesome/scss/_spinning.scss",
+          "output": "font-awesome/css/_spinning.css",
+          "name": "_spinning.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "9ebdc754": {
+          "id": "9ebdc754",
+          "path": "font-awesome/scss/_stacked.scss",
+          "output": "font-awesome/css/_stacked.css",
+          "name": "_stacked.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
+        },
+        "38b7f1de": {
+          "id": "38b7f1de",
+          "path": "font-awesome/scss/_variables.scss",
+          "output": "font-awesome/css/_variables.css",
+          "name": "_variables.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "df094894"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
