--- a/prepros.cfg
+++ b/prepros.cfg
@@ -909,6 +909,45 @@
             "df094894"
           ],
           "type": "sass"
+        },
+        "060d1917": {
+          "id": "060d1917",
+          "path": "images/facade2.jpg",
+          "output": "images/facade2.jpg",
+          "name": "facade2.jpg",
+          "category": "IMAGE",
+          "size": 18958,
+          "type": "jpg",
+          "initialSize": 18958,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "458581c1": {
+          "id": "458581c1",
+          "path": "images/zany_brainy_logo_bw2.jpg",
+          "output": "images/zany_brainy_logo_bw2.jpg",
+          "name": "zany_brainy_logo_bw2.jpg",
+          "category": "IMAGE",
+          "size": 8344,
+          "type": "jpg",
+          "initialSize": 8344,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "57aa478a": {
+          "id": "57aa478a",
+          "path": "images/zany_brainy_logo2.jpg",
+          "output": "images/zany_brainy_logo2.jpg",
+          "name": "zany_brainy_logo2.jpg",
+          "category": "IMAGE",
+          "size": 5209,
+          "type": "jpg",
+          "initialSize": 5209,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
